--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,158 @@
-.App {
-  text-align: center;
+html, body {
+  height: 100%;
+  margin: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#root,.container {
+  height: 100%;
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.wrapper{
+  height: 100%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.file-container{
+  padding: 0px;
+}
+.menu{
+  height: 100%;
+}
+
+.sidebar{
+  height: 100%;
+  background-color:rgb(24,46,67);
+  color:white;
+  overflow-y: scroll;
+
+
+}
+
+.folder-icon{
+  text-align: right;
+  padding-right: 30px;
+  cursor: pointer;
+  font-size: 20px;
+}
+
+
+
+.folder-icon:active{
+  opacity: 0.5;
+}
+
+
+.folder-title{
+  text-align: left;
+  padding-left: 30px;
+  font-size: 20px;
+}
+
+.folder-list{
+  padding-right: 30px;
+  padding-left: 30px;
+  color: black;
+  margin-top: 15px;
+
+}
+
+.folder-list>div>div{
+  cursor: pointer;
+}
+
+.folder-list>div>div:hover{
+  background-color: #ebebf3;
+}
+
+.objects{
+  /* min-height: 150px;
+  background: white;
+  margin-left: 10px; */
+}
+
+.title{
+  width: 100%;
+  border-radius: 0px;
+  font-weight: bold;
+  background-color:rgb(24,46,67);
+  border-color: rgb(24,46,67);
+}
+
+.title:hover{
+  background-color:rgb(32,65,97);
+  border-color: rgb(32,65,97);
+}
+
+.files-wrapper{
+  height: 100vh;
+  max-height: 100vh;
+  overflow-y: auto;
+  padding: 15px;
+}
+
+.files{
+
+  height: auto;
+  margin-top: 45px;
+  margin-bottom: 45px;
+  border-radius: 8px;
+  box-shadow: 0px 0px 0px 1px #e0dbdb;
+}
+
+.uploader-wrapper{
+  position: relative;
+}
+
+.btn-wrapper{
+  width: 100%;
+      /* background: red; */
+  margin-right: 0;
+  margin-left: 0px;
+  border-bottom: 1px solid #e0dbdb;
+}
+
+.list-wrapper{
+  width: 100%;
+      /* background: red; */
+  margin-right: 0;
+  margin-left: 0px;
+}
+
+.btn-wrapper >div{
+  width: 100%;
+  padding: 5px;
+}
+.uploader-input{
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  opacity: 0;
+}
+
+.form-uploader{
+    width: 112px;
+    float: right;
+}
+
+.form-group-style{
+  margin:0;
+}
+
+.list-group{
+  width: 100%;
+}
+
+.form-delete{
+  padding-left: 15px;
+  padding-right: 15px;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  height: 100%;
+  display: flex;
+  align-items: center;
+  color: grey;
+  float: right;
+  cursor: pointer;
 }
