--- a/src/App.css
+++ b/src/App.css
@@ -68,15 +68,17 @@ html, body {
 }
 
 .folder-list{
-  padding-right: 30px;
-  padding-left: 30px;
+  padding-right: 28px;
+  padding-left: 16px;
   color: black;
   margin-top: 15px;
-
 }
 
 .folder-list>div>div{
   cursor: pointer;
+  padding: 3px 8px;
+  margin: 5px;
+  border-radius: 10px!important;
 }
 
 .folder-list>div>div:hover{
@@ -110,12 +112,10 @@ html, body {
 }
 
 .files{
-
   height: auto;
   margin-top: 45px;
   margin-bottom: 45px;
   border-radius: 8px;
-  box-shadow: 0px 0px 0px 1px #e0dbdb;
 }
 
 .uploader-wrapper{
@@ -124,7 +124,8 @@ html, body {
 
 .btn-wrapper{
   width: 100%;
-      /* background: red; */
+  height: 51px;
+  display: flex;
   margin-right: 0;
   margin-left: 0px;
   border-bottom: 1px solid #e0dbdb;
@@ -132,7 +133,7 @@ html, body {
 
 .list-wrapper{
   width: 100%;
-      /* background: red; */
+  padding-top: 25px;
   margin-right: 0;
   margin-left: 0px;
 }
@@ -162,8 +163,14 @@ html, body {
 
 .list-group{
   width: 100%;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-left: 8px;
 }
 
+.card{
+  margin: 8px;
+}
 .form-delete{
   padding-left: 15px;
   padding-right: 15px;
@@ -186,4 +193,9 @@ html, body {
 
 .img-thumb{
   cursor: pointer;
+}
+
+.check-form{
+  position: absolute;
+  left: 5px;
 }
